fix z-index

--- a/styles/PersonalLinks/PersonalLinks.module.scss
+++ b/styles/PersonalLinks/PersonalLinks.module.scss
@@ -1,4 +1,5 @@
 .PersonalLinks {
+  z-index: 2;
   position: fixed;
   opacity: 0;
   display: flex;
